--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-hello javascript
-<script>
-  type = "text/javascript";
-  console.log("hello friends");
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>JS Rocketeer</title>
+    <script type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
+  <body>
+    <h1>hello javascript</h1>
+    <a href="#" onclick="car.switchCar(true);">Click me</a>
+  </body>
+</html>
