edited script in index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>hello javascript</h1>
-    <a href="#" onclick="car.switchCar(true);">Click me</a>
+    <a href="#" onclick="sayMyName('Jess')">Click me</a>
   </body>
 </html>
