--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>hello javascript</h1>
-    <a href="#" onclick="sayMyName('Jess')">Click me</a>
+    <a href="#" onClick="sayMyName('Jess');">Click me</a>
   </body>
 </html>
