--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>hello javascript</h1>
-    <a href="#" onClick="sayMyName('Jess');">Click me</a>
+    <a href="#" onClick="doCoolStuff();">Click me</a>
+
+    <div class="cool" id="cool">
+      <p>Hello, I am cool!</p>
+    </div>
   </body>
 </html>
